移除基于jni的upcall获取method上转为使用ClassLoaderData获取method地址的方式 防止local ref的UB